--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "@hezedu/amd",
-  "version": "1.0.0",
+  "name": "amd_ef",
+  "version": "1.0.3",
   "main": "index.js",
+  
+  "description": "Instead of AMD and error first",
   "keywords": [
     "amd",
+    "async",
+    "require",
+    "error first",
     "frontend",
     "simple"
   ],
   "scripts": {
-    "min": "terser  ./src/amd.js -o ./dist/amd.min.js --compress --mangle",
-    "p": "npm publish --access public"
+    "min": "terser  ./src/amd_ef.js -o ./dist/amd_ef.min.js --compress --mangle"
   },
   "files": [
     "index.js",
@@ -25,7 +29,6 @@
   "dependencies": {},
   "license": "MIT",
   "email": "hezedu@hotmail.com",
-  "description": "virgin",
   "bugs": {
     "url": "https://github.com/hezedu/amd/issues"
   },
